deps/v8/test/message/syntactic-tail-call-in-logical-or.out
*%(basename)s:13: SyntaxError: Tail call expression is not allowed here
  return   continue f()   || a ;
           ^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
